Update NetEmu* replacement classes for MD-SAL
Make NetEmuCodeGenerator and NetEmuYangToSourcesProcessor support the
new :yangToSources features of gradle.NetEmuPlugin